# GreenTiger

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml
.github/workflows/: main.yml
Chapter01/: CMakeLists.txt  Exercises.h  Exercises.inl  Program.cpp  Program.h  Test.cpp
Chapter02/: CMakeLists.txt  Program.cpp  Program.h  Test.cpp
Chapter03/: CMakeLists.txt  DeclerationParser.h  ExpressionParser.h  IdentifierParser.h  Program.cpp  Program.h  Skipper.h  Test.cpp
Chapter04/: AbstractSyntaxTree.h  Annotation.h  CMakeLists.txt  DeclerationParser.h  ErrorHandler.h  ExpressionParser.h  IdentifierParser.h  Program.cpp  Program.h  Skipper.h  StringParser.h  Test.cpp
Chapter05/: AbstractSyntaxTree.h  Annotation.h  CMakeLists.txt  Compiler.cpp  Compiler.h  ErrorHandler.h  ExpressionParser.h  IdentifierParser.h  Program.cpp  Program.h  Skipper.h  StringParser.h  Test.cpp  Types.h
Chapter06/: CMakeLists.txt  CallingConvention.h  Compiler.cpp  Compiler.h  DeclerationParser.h  EscapeAnalyser.cpp  EscapeAnalyser.h  ExpressionParser.h  Frame.h  FrameFactory.h  Program.cpp  Skipper.h  TempMap.cpp  TempMap.h  Test.cpp  Translator.cpp  Translator.h  x64FastCallFrame.cpp  x64FastCallFrame.h  x64FastCallFrameFactory.cpp  x64FastCallFrameFactory.h
Chapter06/x64FastCall/: CallingConvention.cpp  CallingConvention.h  Frame.cpp  Frame.h
Chapter07/: AbstractSyntaxTree.h  CMakeLists.txt  CallingConvention.h  EscapeAnalyser.h  ExpressionParser.h  Fragment.h  Frame.h  IdentifierParser.h  Program.cpp  Program.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  StringParser.h  TempMap.h  Test.cpp  Translator.cpp  Translator.h  Tree.cpp  Tree.h
Chapter07/x64FastCall/: CallingConvention.cpp  CallingConvention.h  Frame.cpp  Frame.h  Registers.h
Chapter08/: Annotation.h  CMakeLists.txt  Canonicalizer.cpp  Canonicalizer.h  ErrorHandler.h  EscapeAnalyser.cpp  EscapeAnalyser.h  ExpressionParser.h  Frame.h  IdentifierParser.h  Program.cpp  Program.h  SemanticAnalyzer.h  StringParser.h  TempMap.cpp  Test.cpp  Translator.cpp  Translator.h  Tree.cpp  Tree.h
Chapter08/x64FastCall/: CallingConvention.h  Frame.cpp
Chapter09/: AbstractSyntaxTree.h  Assembly.cpp  Assembly.h  CMakeLists.txt  CallingConvention.cpp  CallingConvention.h  Canonicalizer.cpp  Canonicalizer.h  CodeGenerator.cpp  CodeGenerator.h  DeclerationParser.h  ExpressionParser.h  Frame.h  Machine.h  MachineRegistrar.h  Program.cpp  Program.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  Skipper.h  StringParser.h  TempMap.cpp  TempMap.h  Translator.cpp  Translator.h  Tree.cpp  Tree.h  TreeAdapted.h
Chapter09/m68k/: CMakeLists.txt  m68kCallingConvention.cpp  m68kCallingConvention.h  m68kCodeGenerator.cpp  m68kCodeGenerator.h  m68kFrame.cpp  m68kFrame.h  m68kMachine.cpp  m68kMachine.h
Chapter09/test/: CMakeLists.txt  Test.h  TestMain.cpp  arithmetic.cpp  array.cpp  assignment.cpp  boolean.cpp  break.cpp  checkedCompile.cpp  comparison.cpp  compileFiles.cpp  for.cpp  functionCall.cpp  functionDeclarations.cpp  ifThen.cpp  integer.cpp  library.cpp  lvalue.cpp  nil.cpp  record.cpp  sequence.cpp  string.cpp  typeDeclarations.cpp  while.cpp
Chapter09/x64/: CMakeLists.txt  x64CallingConvention.cpp  x64CallingConvention.h  x64CodeGenerator.cpp  x64CodeGenerator.h  x64Frame.cpp  x64Frame.h  x64Machine.cpp  x64Machine.h
Chapter10/: AbstractSyntaxTree.h  Assembly.cpp  Assembly.h  CMakeLists.txt  CallingConvention.cpp  CallingConvention.h  Canonicalizer.cpp  CodeGenerator.cpp  CodeGenerator.h  DeclerationParser.h  EscapeAnalyser.cpp  EscapeAnalyser.h  ExpressionParser.h  FlowGraph.cpp  FlowGraph.h  Frame.cpp  Frame.h  IdentifierParser.h  LivenessAnalyser.cpp  LivenessAnalyser.h  Machine.h  MachineRegistrar.h  MachineRegistration.h.in  Program.cpp  Program.h  SemanticAnalyzer.h  StringParser.h  TempLabel.h  TempMap.cpp  TempMap.h  TempRegister.h  Translator.cpp  Tree.cpp  Tree.h  TreeAdapted.h  Types.h
Chapter10/m68k/: CMakeLists.txt  m68kCallingConvention.cpp  m68kCallingConvention.h  m68kCodeGenerator.cpp  m68kCodeGenerator.h  m68kFrame.cpp  m68kFrame.h  m68kMachine.cpp  m68kMachine.h  m68kRegisters.h
Chapter10/test/: CMakeLists.txt  Test.cpp  Test.h  TestMain.cpp  arithmetic.cpp  array.cpp  assignment.cpp  boolean.cpp  break.cpp  comparison.cpp  for.cpp  functionCall.cpp  functionDeclarations.cpp  ifThen.cpp  integer.cpp  library.cpp  lvalue.cpp  nil.cpp  record.cpp  sequence.cpp  string.cpp  typeDeclarations.cpp  while.cpp
Chapter10/x64/: CMakeLists.txt  x64CallingConvention.cpp  x64CallingConvention.h  x64CodeGenerator.cpp  x64Frame.cpp  x64Frame.h  x64Machine.cpp  x64Machine.h  x64Registers.h
ci/: build.cmake
cmake/: CatchAddTests.cmake  CompilerWarnings.cmake  ParseAndAddCatchTests.cmake
include/: CMakeLists.txt  fusionAccumulate.h  irange.h  overload_set.h  printRange.h  strong_typedef.h  testsHelper.h.in  type_traits.h  variantMatch.h  vectorApply.h  warning_suppress.h
